src/app.scss
/* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
@import 'tailwindcss/base.css';
@import 'tailwindcss/components.css';
@import 'tailwindcss/utilities.css';

@font-face {
	font-family: 'Outfit';
	font-weight: 0 700;
	src: url(/fonts/Outfit-VariableFont_wght.woff2) format('woff2');
	font-display: block;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
	font-family: 'Outfit', sans-serif;
	font-optical-sizing: auto;
	color-scheme: light dark;
}

body {
	background-color: $background;
	color: $text;
}

h2 {
	font-size: 3rem;
	font-weight: 700;
	margin-bottom: 0.5rem;
	opacity: 0;
	@media screen and (width < 768px) {
		font-size: 2.5rem;
	}
}
h3 {
	font-weight: 600;
	margin-bottom: 0.3rem;
	font-size: 1.2rem;
}

p {
	line-height: 2.7rem;
}

.section {
	height: 100%;
	width: 70%;
	margin-inline: auto;
	padding-block: 2rem;
	@media screen and (width < 1024px) {
		width: 85%;
	}
}

/* Custom Scrollbar Styles */
::-webkit-scrollbar {
	width: 0.5em;
	height: 0.5em;
}

::-webkit-scrollbar-track {
	background: transparent;
}

::-webkit-scrollbar-thumb {
	background: #555;
	border-radius: 6px;
}

::-webkit-scrollbar-thumb:hover {
	background: #707070;
}

